--- a/examples/nmr.ipynb
+++ b/examples/nmr.ipynb
@@ -260,7 +260,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "outputs": [],
-   "source": [],
+   "source": [
+    "todo:\n",
+    "-ignore find_peaks\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
